# ros

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  rustfmt.toml
cmake/: aarch64-none-elf.cmake  arm-none-eabi.cmake  platform.cmake  raspberrypi.cmake
debug/: aarch64.gdb  armv7.gdb
debug/openocd/: README.md  aarch64.gdb  armv7.gdb
debug/openocd/interface/: ft4232h.cfg
debug/qemu/: README.md  aarch64.gdb
doc/: ARCHITECTURE.md
src/arch/: CMakeLists.txt
src/arch/aarch64/: boot.S  kernel_stub.c
src/arch/armv7/: boot.S  boot.ld  boot_qemu.ld  kernel_stub.c
src/arch/armv8/: kernel_stub.c
src/boot/: CMakeLists.txt  README.md
src/boot/aarch64/: boot.S  exceptions.S  kernel_stub.c  vec.S
src/boot/armv7/: boot.S  kernel_stub.c
src/boot/atags/: atags.c
src/boot/common/: atags.h
src/bootstrap/: CMakeLists.txt  README.md
src/bootstrap/aarch64/: CMakeLists.txt  boot.S  boot.ld.in  dtb.S  exceptions.S  pages.S
src/bootstrap/aarch64/include/: abi.h  mmu.h
src/bootstrap/armv7/: CMakeLists.txt  boot.S  boot.ld.in  dtb.S  exceptions.S  extensions.S  pages.S  pages_long.S  pages_lpae.S  pages_short.S
src/bootstrap/armv7/include/: abi.h  mmu.h
src/kernel/: CMakeLists.txt  Cargo.toml  README.md  boot.ld  build.rs  cbindgen.toml  kernel_main.c
src/kernel/aarch64/: boot.S  boot.ld  boot.ld.in  dtb.S  exceptions.S  pages.S  peripherals.h
src/kernel/aarch64/include/: abi.h  mmu.h  rpi_peripherals.h
src/kernel/arch/: CMakeLists.txt
src/kernel/arch/aarch64/: foo.S
src/kernel/arch/armv7/: foo.S
src/kernel/armv7/: boot.S  boot.ld  boot.ld.in  pages.S
src/kernel/armv7/include/: abi.h  mmu.h  peripherals.h  rpi_peripherals.h
src/kernel/c/: ros_kernel.h
src/kernel/include/: rpi_common.h
src/kernel/src/: lib.rs  ros_arch.rs  ros_kernel.rs
src/kernel/src/debug/: print.rs
src/kernel/src/exceptions/: trap.rs
src/kernel/src/peripherals/: base.rs  gpio.rs  mini_uart.rs  mod.rs  utils.rs
src/kernel/src/support/: atags.rs
src/kernel_stub/: CMakeLists.txt  aarch64.S  aarch64.ld  armv7.S  armv7.ld
src/ros/: CMakeLists.txt  ros_kernel.c  ros_kernel.h
src/ros_kernel/: CMakeLists.txt  Cargo.toml  README.md
src/ros_kernel/src/: lib.rs  ros_kernel.rs
src/ros_kernel/src/arch/: README.md  mod.rs
src/ros_kernel/src/arch/aarch64/: bits.rs  debug.rs  exceptions.rs  memory.rs  mm.rs  mod.rs  pages.rs  peripherals.rs  sync.rs  task.rs
src/ros_kernel/src/arch/arm/: cpu.rs  debug.rs  memory.rs  mod.rs  soc.rs  sync.rs  unwind.rs
src/ros_kernel/src/arch/armv7/: bits.rs  debug.rs  exceptions.rs  memory.rs  mm.rs  mod.rs  pages.rs  peripherals.rs  sync.rs  task.rs
src/ros_kernel/src/arch/common32/: bits.rs  mod.rs
src/ros_kernel/src/arch/common64/: bits.rs  mod.rs
src/ros_kernel/src/debug/: print.rs
src/ros_kernel/src/drivers/video/: console.rs  framebuffer.rs  mod.rs
src/ros_kernel/src/exceptions/: mod.rs  trap.rs
src/ros_kernel/src/mm/: buddy_allocator.rs  mod.rs  page_allocator.rs  pager.rs  pages.rs  paging.rs  slab_allocator.rs
src/ros_kernel/src/mm/buddy_allocator/: test.rs
src/ros_kernel/src/mm/page_allocator/: test.rs
src/ros_kernel/src/peripherals/: base.rs  gpio.rs  mailbox.rs  memory.rs  mini_uart.rs  mod.rs  soc.rs  utils.rs
src/ros_kernel/src/support/: align.rs  atags.rs  bits.rs  debug.rs  dtb.rs  dtb2.rs  hash.rs  hash_map.rs  kernel_init.rs  mod.rs  print.rs  range.rs  range_set.rs  rpi.rs
src/ros_kernel/src/sync/: mod.rs  spin_lock.rs
src/ros_kernel/src/task/: mod.rs
src/ros_kernel/src/test/: macros.rs  mod.rs
src/ros_kernel_user/: Cargo.toml  README.md
src/ros_user/: CMakeLists.txt  Cargo.toml  README.md
src/ros_user/src/: lib.rs  ros_user.rs
src/start/: CMakeLists.txt  README.md
src/start/aarch64/: CMakeLists.txt  cpu.S  dtb.S  exceptions.S  pages.S  spin_lock.S  start.S  start.ld.in
src/start/aarch64/include/: mmu.h
src/start/armv7/: CMakeLists.txt  exceptions.S  extensions.S  pages.S  pages_long.S  pages_short.S  spin_lock.S  start.S  start.ld.in
src/start/armv7/include/: abi.h
