[package]
name = "ros_kernel"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.relwithdebinfo]
inherits = "release"
debug = true

[dependencies]
ros_kernel_user = {path="../ros_kernel_user"}

[features]
default = []
module_tests = []
